# ratio-gpt

./: .gitignore  Cargo.toml
src/: bot.rs  train.rs
